# prototyp

./: Cargo.toml  README.md
assets/: TX Plant.tsx  TX Props.tsx  grass.tsx  map.tmx  number-tiles.tsx
assets/dialogues/: 1.diag
assets/map/: bg.tsx  numbers.tsx  plant.tsx  simple.tiled-session  simple.tmx
assets/objects/: obj.yaml
assets/prototypes/: patient.child.physics.yaml  patient.yaml  player.child.physics.yaml  player.yaml  talking_npc.child.physics.yaml  talking_npc.yaml
src/: components.rs  main.rs  resources.rs  tiled.rs
src/dialogue/: mod.rs  parser.rs
src/prototypes/: animation.rs  collider.rs  common.rs  mod.rs  npc.rs  sprite.rs
src/systems/: animation.rs  collision.rs  cursor_pos.rs  debug.rs  dialogue.rs  helpers.rs  mod.rs  movement.rs  npc.rs  setup.rs  sign.rs  text.rs
