[package]
name = "prototyp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bevy = { version = "0.9.1", features = ["serialize"] }
bevy-inspector-egui = "0.17.0"
bevy_ecs_tilemap = "0.9.0"
bevy_egui = "0.19.0"
bevy_proto = "0.6.0"
bevy_rapier2d = { version = "0.20.0", features = [ "simd-stable", "parallel" ] }
rand = "0.8.5"
relative-path = "1.7.3"
serde = "1.0.152"
tiled = "0.10.3"
typetag = "0.2"
